--- a/assets/css/responsive-elements.css
+++ b/assets/css/responsive-elements.css
@@ -51,7 +51,20 @@ justify-content: center;
 }
 
 @media(max-width: 450px){
-    .container{
+ .container{
         width: 290px;
-    }
+}
+header nav{
+    background: #fff;
+    width: 100%;
+    padding: 10px 0 20px 0;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);
+}
+header nav ul{
+    flex-direction: column;
+}
+
+header nav ul li{
+margin: 10px 0; 
+}
 }
